SONAR-19558 Fix usage of indexOnAnalysis and minor fixes